--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Rafael's Todo App</title>
   </head>
-  <body class="dark bg-zinc-300 dark:bg-zinc-950">
+  <body class="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
