feat: update site's title.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..500;1,300..900&family=Rubik:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
-    <title>Rafael's Todo App</title>
+    <title>Gerenciador de Tarefas Simples</title>
   </head>
   <body class="dark">
     <div id="root"></div>
